--- a/_til_docs/index.html
+++ b/_til_docs/index.html
@@ -609,29 +609,48 @@
     </a>
     <nav id="menu">
       <ul>
-<li><a class="" href="README.html">README</a></li>
 <li><a class="active" href="index.html">index</a></li>
 <li><a class="" href="Authentication.html">Authentication</a></li>
 <li><a class="" href="DNS_Config.html">DNS Config</a></li>
+<li><a class="" href="Databases.html">Databases</a></li>
 <li><a class="" href="Distributed_Systems.html">Distributed Systems</a></li>
-<li><a class="" href="Django.html">Django</a></li>
+<li class="heading"><span>Django</span></li>
+<ul>
+<li><a class="" href="Django/Django.html">Django</a></li>
+<li><a class="" href="Django/Migrations.html">Migrations</a></li>
+<li><a class="" href="Django/Models.html">Models</a></li>
+<li><a class="" href="Django/Querysets.html">Querysets</a></li>
+</ul>
 <li class="heading"><span>Entrepreneurship</span></li>
 <ul>
+<li><a class="" href="Entrepreneurship/Acronyms.html">Acronyms</a></li>
 <li><a class="" href="Entrepreneurship/Aquired_Episodes.html">Aquired Episodes</a></li>
+<li><a class="" href="Entrepreneurship/Business_Analysis.html">Business Analysis</a></li>
+<li><a class="" href="Entrepreneurship/Terminology.html">Terminology</a></li>
+<li><a class="" href="Entrepreneurship/Venture_Capital.html">Venture Capital</a></li>
 </ul>
+<li><a class="" href="File_Sharing.html">File Sharing</a></li>
 <li><a class="" href="Frontend.html">Frontend</a></li>
-<li><a class="" href="JavaScript.html">JavaScript</a></li>
+<li class="heading"><span>JavaScript</span></li>
+<ul>
+<li><a class="" href="JavaScript/Flux.html">Flux</a></li>
+<li><a class="" href="JavaScript/JavaScript.html">JavaScript</a></li>
+<li><a class="" href="JavaScript/React.html">React</a></li>
+<li><a class="" href="JavaScript/Vue.html">Vue</a></li>
+</ul>
 <li><a class="" href="Python.html">Python</a></li>
 <li class="heading"><span>TCP IP</span></li>
 <ul>
 <li><a class="" href="TCP-IP/ARP-RARP.html">ARP RARP</a></li>
+<li><a class="" href="TCP-IP/ICMP.html">ICMP</a></li>
 <li><a class="" href="TCP-IP/IP_Addresses.html">IP Addresses</a></li>
+<li><a class="" href="TCP-IP/IP_Fragmentation.html">IP Fragmentation</a></li>
 <li><a class="" href="TCP-IP/IP_Subnets.html">IP Subnets</a></li>
 <li><a class="" href="TCP-IP/Network_Layers.html">Network Layers</a></li>
 <li><a class="" href="TCP-IP/TCP-IP.html">TCP IP</a></li>
 <li><a class="" href="TCP-IP/Unix_Specific.html">Unix Specific</a></li>
+<li><a class="" href="TCP-IP/routing.html">routing</a></li>
 </ul>
-<li><a class="" href="Vue.html">Vue</a></li>
 <li><a class="" href="docker-compose.html">docker compose</a></li>
 </ul>
     </nav>
@@ -643,19 +662,8 @@
       </div>
 
       <h1 id="collection-of-today-i-learned-(til)">Collection of Today I Learned (TIL) <a class="heading-anchor-permalink" href="#collection-of-today-i-learned-(til)">#</a></h1>
-<p>This repository serves as a random collection of TIL’s over a random period of days. Some of these were review and others were new concepts.</p>
-<ul>
-<li><a href="Authentication.html">Authentication</a></li>
-<li><a href="Distributed_Systems.html">Distributed Systems</a></li>
-<li><a href="Django.html">Django</a></li>
-<li><a href="docker-compose.html">docker-compose</a></li>
-<li><a href="Frontend.html">Frontend</a></li>
-<li><a href="JavaScript.html">JavaScript</a></li>
-<li><a href="Python.html">Python</a></li>
-<li><a href="Vue.html">Vue</a></li>
-<li><a href="TCP-IP/TCP-IP.html">TCP</a></li>
-<li><a href="DNS_Config.html">Domain Name Configuration</a></li>
-</ul>
+<p>This repository serves as a random collection of TIL’s over a random period of days. Some of these were review and others were new concepts. Hope you enjoy!</p>
+<p>For any suggestions, corrections, or issues, feel free to file an issue on my today I learned <a href="https://github.com/srich36/TodayILearned/issues">github repository</a>.</p>
 
     </article>
   </div>
