--- a/_til_docs/Django/Django.html
+++ b/_til_docs/Django/Django.html
@@ -609,49 +609,49 @@
     </a>
     <nav id="menu">
       <ul>
-<li><a class="" href="index.html">index</a></li>
-<li><a class="" href="Authentication.html">Authentication</a></li>
-<li><a class="" href="DNS_Config.html">DNS Config</a></li>
-<li><a class="" href="Databases.html">Databases</a></li>
-<li><a class="" href="Distributed_Systems.html">Distributed Systems</a></li>
+<li><a class="" href="../index.html">index</a></li>
+<li><a class="" href="../Authentication.html">Authentication</a></li>
+<li><a class="" href="../DNS_Config.html">DNS Config</a></li>
+<li><a class="" href="../Databases.html">Databases</a></li>
+<li><a class="" href="../Distributed_Systems.html">Distributed Systems</a></li>
 <li class="heading"><span>Django</span></li>
 <ul>
-<li><a class="" href="Django/Django.html">Django</a></li>
-<li><a class="" href="Django/Migrations.html">Migrations</a></li>
-<li><a class="" href="Django/Models.html">Models</a></li>
-<li><a class="" href="Django/Querysets.html">Querysets</a></li>
+<li><a class="active" href="Django.html">Django</a></li>
+<li><a class="" href="Migrations.html">Migrations</a></li>
+<li><a class="" href="Models.html">Models</a></li>
+<li><a class="" href="Querysets.html">Querysets</a></li>
 </ul>
 <li class="heading"><span>Entrepreneurship</span></li>
 <ul>
-<li><a class="" href="Entrepreneurship/Acronyms.html">Acronyms</a></li>
-<li><a class="" href="Entrepreneurship/Aquired_Episodes.html">Aquired Episodes</a></li>
-<li><a class="" href="Entrepreneurship/Business_Analysis.html">Business Analysis</a></li>
-<li><a class="" href="Entrepreneurship/Terminology.html">Terminology</a></li>
-<li><a class="" href="Entrepreneurship/Venture_Capital.html">Venture Capital</a></li>
+<li><a class="" href="../Entrepreneurship/Acronyms.html">Acronyms</a></li>
+<li><a class="" href="../Entrepreneurship/Aquired_Episodes.html">Aquired Episodes</a></li>
+<li><a class="" href="../Entrepreneurship/Business_Analysis.html">Business Analysis</a></li>
+<li><a class="" href="../Entrepreneurship/Terminology.html">Terminology</a></li>
+<li><a class="" href="../Entrepreneurship/Venture_Capital.html">Venture Capital</a></li>
 </ul>
-<li><a class="" href="File_Sharing.html">File Sharing</a></li>
-<li><a class="active" href="Frontend.html">Frontend</a></li>
+<li><a class="" href="../File_Sharing.html">File Sharing</a></li>
+<li><a class="" href="../Frontend.html">Frontend</a></li>
 <li class="heading"><span>JavaScript</span></li>
 <ul>
-<li><a class="" href="JavaScript/Flux.html">Flux</a></li>
-<li><a class="" href="JavaScript/JavaScript.html">JavaScript</a></li>
-<li><a class="" href="JavaScript/React.html">React</a></li>
-<li><a class="" href="JavaScript/Vue.html">Vue</a></li>
+<li><a class="" href="../JavaScript/Flux.html">Flux</a></li>
+<li><a class="" href="../JavaScript/JavaScript.html">JavaScript</a></li>
+<li><a class="" href="../JavaScript/React.html">React</a></li>
+<li><a class="" href="../JavaScript/Vue.html">Vue</a></li>
 </ul>
-<li><a class="" href="Python.html">Python</a></li>
+<li><a class="" href="../Python.html">Python</a></li>
 <li class="heading"><span>TCP IP</span></li>
 <ul>
-<li><a class="" href="TCP-IP/ARP-RARP.html">ARP RARP</a></li>
-<li><a class="" href="TCP-IP/ICMP.html">ICMP</a></li>
-<li><a class="" href="TCP-IP/IP_Addresses.html">IP Addresses</a></li>
-<li><a class="" href="TCP-IP/IP_Fragmentation.html">IP Fragmentation</a></li>
-<li><a class="" href="TCP-IP/IP_Subnets.html">IP Subnets</a></li>
-<li><a class="" href="TCP-IP/Network_Layers.html">Network Layers</a></li>
-<li><a class="" href="TCP-IP/TCP-IP.html">TCP IP</a></li>
-<li><a class="" href="TCP-IP/Unix_Specific.html">Unix Specific</a></li>
-<li><a class="" href="TCP-IP/routing.html">routing</a></li>
+<li><a class="" href="../TCP-IP/ARP-RARP.html">ARP RARP</a></li>
+<li><a class="" href="../TCP-IP/ICMP.html">ICMP</a></li>
+<li><a class="" href="../TCP-IP/IP_Addresses.html">IP Addresses</a></li>
+<li><a class="" href="../TCP-IP/IP_Fragmentation.html">IP Fragmentation</a></li>
+<li><a class="" href="../TCP-IP/IP_Subnets.html">IP Subnets</a></li>
+<li><a class="" href="../TCP-IP/Network_Layers.html">Network Layers</a></li>
+<li><a class="" href="../TCP-IP/TCP-IP.html">TCP IP</a></li>
+<li><a class="" href="../TCP-IP/Unix_Specific.html">Unix Specific</a></li>
+<li><a class="" href="../TCP-IP/routing.html">routing</a></li>
 </ul>
-<li><a class="" href="docker-compose.html">docker compose</a></li>
+<li><a class="" href="../docker-compose.html">docker compose</a></li>
 </ul>
     </nav>
     <article id="main" class="content">
@@ -661,10 +661,66 @@
 
       </div>
 
-      <h4 id="color-changes">Color changes <a class="heading-anchor-permalink" href="#color-changes">#</a></h4>
-<p>Proper design frameworks have a standard color set. To theme your app you can easily darken and lighten each of the colors with darken or lighten classes. This produces colors that go together well.</p>
-<h3 id="icons">Icons <a class="heading-anchor-permalink" href="#icons">#</a></h3>
-<p>Icons always act weird in Vue, you cannot toggle their classes dynamically and they weren’t appearing when accessing by <code>wrapper.find</code> in just</p>
+      <h1 id="django-basics">Django Basics <a class="heading-anchor-permalink" href="#django-basics">#</a></h1>
+<h3 id="authentication-backends">Authentication Backends <a class="heading-anchor-permalink" href="#authentication-backends">#</a></h3>
+<p>Authentication backends in Django are simply classes that implement <code>get_user</code> and <code>authenticate</code> methods given a primary key and credentials respectively. If multiple authentication backends are specified in the configuration, Django will try all available backends until a successful authentication is found</p>
+<h3 id="custom-user-models">Custom User Models <a class="heading-anchor-permalink" href="#custom-user-models">#</a></h3>
+<p>It is recommended to create a custom user model whenever you are starting a new Django project. To maintain all the built in functionality of password hashing, etc you can inherit from <code>BaseUser</code> and point <code>AUTH_USER_MODEL</code> to the custom user</p>
+<h3 id="automatic-primary-keys">Automatic Primary Keys <a class="heading-anchor-permalink" href="#automatic-primary-keys">#</a></h3>
+<p>By default Django gives every table the field <code>id = models.AutoField(primary_key=True)</code> which is an auto updating primary key</p>
+<h3 id="random-tidbits">Random Tidbits <a class="heading-anchor-permalink" href="#random-tidbits">#</a></h3>
+<ul>
+<li>For an app that doesn’t have a migrations directory yet, e.g. and app that is just created, you have to run <code>python manage.py makemigrations &lt;app_name&gt;</code></li>
+</ul>
+<h3 id="meta-classes">Meta Classes <a class="heading-anchor-permalink" href="#meta-classes">#</a></h3>
+<h5 id="models">Models <a class="heading-anchor-permalink" href="#models">#</a></h5>
+<p>Meta classes in models represent anything that is not a field, e.g. ordering, column names, etc.</p>
+<h3 id="model-managers">Model Managers <a class="heading-anchor-permalink" href="#model-managers">#</a></h3>
+<p>Model Managers are the most important part of the model as they retrieve instances from the database and provide the database queries. The default model manager is called <code>objects</code> and can be referenced by <code>&lt;model_name&gt;.objects</code> if not overriden</p>
+<h3 id="model-logic">Model Logic <a class="heading-anchor-permalink" href="#model-logic">#</a></h3>
+<p>It is best practice to include necessary simple custom model functions in the models. These can go with other model functions such as <code>__str__</code> and can be referenced by <code>&lt;model_Instance&gt;.&lt;method_name&gt;;</code></p>
+<h3 id="pre-defined-model-methods">Pre-defined model methods <a class="heading-anchor-permalink" href="#pre-defined-model-methods">#</a></h3>
+<p>Django provides pre-defined model methods such as <code>save()</code> and <code>delete()</code> than can be overridden in the model class by simply redefining <code>save(*args, **kwargs)</code> and <code>save(*args, **kwargs)</code>. Calling <code>super(*args, **kwargs)</code> in this methods will ensure the data still gets saved.</p>
+<p>Theses pre-defined methods are why, given an example model <code>Post</code></p>
+<pre><code>b = Post(text)
+b.save()
+</code></pre>
+<p>saves a new Post to the database. <code>save</code> will update a model if it already exists.</p>
+<p>I believe <code>Post(text)</code> provides a constructor that can also be accessed by <code>Post.objects.create(text)</code></p>
+<h2 id="querysets">Querysets <a class="heading-anchor-permalink" href="#querysets">#</a></h2>
+<p>A query set is essentially a <code>select</code> SQL statement with as many filters as desired which act as the <code>where</code> statement. Querysets come from the model’s manager and thus NOT a model instance.</p>
+<p><strong>A queryset does not actually hit the database until it is iterated through or another form of evaluation.</strong> <code>&lt;Model&gt;&lt;/Model&gt;.objects.all()</code> <strong>will not evaluate the queryset and thus will not hit the database</strong></p>
+<p>You can easily chain queryset filters together. This chaining is immutable and returns a new queryset every time</p>
+<h2 id="general-tips">General Tips <a class="heading-anchor-permalink" href="#general-tips">#</a></h2>
+<ul>
+<li>It may be best to avoid signals since they are hard to track down and hard to debug</li>
+<li>Go “top to bottom” with urls
+<ul>
+<li>e.g. plans/&lt;plan_number&gt;/approvals to get all the approvals for a plan</li>
+</ul>
+</li>
+<li>To add a <code>unique=True</code> field to tables with rows:
+<ol>
+<li>Create migration to add a field without <code>unique=True</code></li>
+<li>Create migration to populate existing fields with UUIDs</li>
+<li>Alter field to include unique option</li>
+</ol>
+<ul>
+<li>This is necessary because the initial field value will only be evaluated once when applied to all of the rows, thus it will fail the duplication constraint</li>
+</ul>
+</li>
+<li><code>safe=False</code> is required in a <code>JsonResponse</code> whenever the object you are trying to serialize is not a dictionary
+<ul>
+<li><code>DRF</code> returns a dictionary type called a <code>ReturnDict</code></li>
+</ul>
+</li>
+<li>If you are ever getting import errors when you shouldn’t be, there might be a circular dependency
+<ul>
+<li>You can’t have a model depend on an external file, then have that external file depend on the model</li>
+</ul>
+</li>
+<li>When you are serializing an array of items with <code>DRF</code> you need the flag <code>many=True</code></li>
+</ul>
 
     </article>
   </div>
