--- a/_til_docs/Django/Models.html
+++ b/_til_docs/Django/Models.html
@@ -609,30 +609,49 @@
     </a>
     <nav id="menu">
       <ul>
-<li><a class="active" href="README.html">README</a></li>
-<li><a class="" href="index.html">index</a></li>
-<li><a class="" href="Authentication.html">Authentication</a></li>
-<li><a class="" href="DNS_Config.html">DNS Config</a></li>
-<li><a class="" href="Distributed_Systems.html">Distributed Systems</a></li>
+<li><a class="" href="../index.html">index</a></li>
+<li><a class="" href="../Authentication.html">Authentication</a></li>
+<li><a class="" href="../DNS_Config.html">DNS Config</a></li>
+<li><a class="" href="../Databases.html">Databases</a></li>
+<li><a class="" href="../Distributed_Systems.html">Distributed Systems</a></li>
+<li class="heading"><span>Django</span></li>
+<ul>
 <li><a class="" href="Django.html">Django</a></li>
+<li><a class="" href="Migrations.html">Migrations</a></li>
+<li><a class="active" href="Models.html">Models</a></li>
+<li><a class="" href="Querysets.html">Querysets</a></li>
+</ul>
 <li class="heading"><span>Entrepreneurship</span></li>
 <ul>
-<li><a class="" href="Entrepreneurship/Aquired_Episodes.html">Aquired Episodes</a></li>
+<li><a class="" href="../Entrepreneurship/Acronyms.html">Acronyms</a></li>
+<li><a class="" href="../Entrepreneurship/Aquired_Episodes.html">Aquired Episodes</a></li>
+<li><a class="" href="../Entrepreneurship/Business_Analysis.html">Business Analysis</a></li>
+<li><a class="" href="../Entrepreneurship/Terminology.html">Terminology</a></li>
+<li><a class="" href="../Entrepreneurship/Venture_Capital.html">Venture Capital</a></li>
 </ul>
-<li><a class="" href="Frontend.html">Frontend</a></li>
-<li><a class="" href="JavaScript.html">JavaScript</a></li>
-<li><a class="" href="Python.html">Python</a></li>
+<li><a class="" href="../File_Sharing.html">File Sharing</a></li>
+<li><a class="" href="../Frontend.html">Frontend</a></li>
+<li class="heading"><span>JavaScript</span></li>
+<ul>
+<li><a class="" href="../JavaScript/Flux.html">Flux</a></li>
+<li><a class="" href="../JavaScript/JavaScript.html">JavaScript</a></li>
+<li><a class="" href="../JavaScript/React.html">React</a></li>
+<li><a class="" href="../JavaScript/Vue.html">Vue</a></li>
+</ul>
+<li><a class="" href="../Python.html">Python</a></li>
 <li class="heading"><span>TCP IP</span></li>
 <ul>
-<li><a class="" href="TCP-IP/ARP-RARP.html">ARP RARP</a></li>
-<li><a class="" href="TCP-IP/IP_Addresses.html">IP Addresses</a></li>
-<li><a class="" href="TCP-IP/IP_Subnets.html">IP Subnets</a></li>
-<li><a class="" href="TCP-IP/Network_Layers.html">Network Layers</a></li>
-<li><a class="" href="TCP-IP/TCP-IP.html">TCP IP</a></li>
-<li><a class="" href="TCP-IP/Unix_Specific.html">Unix Specific</a></li>
+<li><a class="" href="../TCP-IP/ARP-RARP.html">ARP RARP</a></li>
+<li><a class="" href="../TCP-IP/ICMP.html">ICMP</a></li>
+<li><a class="" href="../TCP-IP/IP_Addresses.html">IP Addresses</a></li>
+<li><a class="" href="../TCP-IP/IP_Fragmentation.html">IP Fragmentation</a></li>
+<li><a class="" href="../TCP-IP/IP_Subnets.html">IP Subnets</a></li>
+<li><a class="" href="../TCP-IP/Network_Layers.html">Network Layers</a></li>
+<li><a class="" href="../TCP-IP/TCP-IP.html">TCP IP</a></li>
+<li><a class="" href="../TCP-IP/Unix_Specific.html">Unix Specific</a></li>
+<li><a class="" href="../TCP-IP/routing.html">routing</a></li>
 </ul>
-<li><a class="" href="Vue.html">Vue</a></li>
-<li><a class="" href="docker-compose.html">docker compose</a></li>
+<li><a class="" href="../docker-compose.html">docker compose</a></li>
 </ul>
     </nav>
     <article id="main" class="content">
@@ -642,17 +661,34 @@
 
       </div>
 
-      <h1 id="collection-of-today-i-learned-(til)">Collection of Today I Learned (TIL) <a class="heading-anchor-permalink" href="#collection-of-today-i-learned-(til)">#</a></h1>
-<p>This repository serves as a random collection of TIL’s over a random period of days. Some of these were review and others were some concepts were new.</p>
+      <h2 id="contenttype">contenttype <a class="heading-anchor-permalink" href="#contenttype">#</a></h2>
 <ul>
-<li><a href="Authentication.html">Authentication</a></li>
-<li><a href="Distributed_Systems.html">Distributed Systems</a></li>
-<li><a href="Django.html">Django</a></li>
-<li><a href="docker-compose.html">docker-compose</a></li>
-<li><a href="Frontend.html">Frontend</a></li>
-<li><a href="JavaScript.html">JavaScript</a></li>
-<li><a href="Python.html">Python</a></li>
-<li><a href="Vue.html">Vue</a></li>
+<li>The <code>contenttype</code> app automatically builds a table that assigns each model type an ID</li>
+<li>Thus, with the <code>contenttype</code> framework you can access any model type by it’s model ID</li>
+<li>Therefore, any instance in an entire app can be accessed by the combination of two things: the model Class’ contenttype ID and the instance’s primary key</li>
+<li>This is why for generic relations you need a field to store a foreign key to <code>ContentType</code> <strong>and</strong> a positive integer field for the instance ID’s you’ll be relating to</li>
+<li><code>ContentType</code> is a model that has fields
+<ul>
+<li><code>id</code></li>
+<li><code>app_label</code></li>
+<li><code>model</code></li>
+</ul>
+</li>
+</ul>
+<h3 id="generic-relations">Generic relations <a class="heading-anchor-permalink" href="#generic-relations">#</a></h3>
+<ul>
+<li>Since with the two keys you can access any instance in any Django table, this enables <code>generic relations</code></li>
+<li>A generic relation is a foreign key pointing to any generic model
+<ul>
+<li>Without generic relations, you must decide what model the foreign key points to initially. With generic relations the foreign key can point to any model
+<ul>
+<li>This allows a model to have a foreign key to any model type (e.g. an attachment model pointing to any other model in the database)</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>declaring a <code>GenericRelation()</code> is a way to access this in reverse from the model the generic relation points to</li>
+<li></li>
 </ul>
 
     </article>
