--- a/_til_docs/Entrepreneurship/Terminology.html
+++ b/_til_docs/Entrepreneurship/Terminology.html
@@ -609,49 +609,49 @@
     </a>
     <nav id="menu">
       <ul>
-<li><a class="" href="index.html">index</a></li>
-<li><a class="" href="Authentication.html">Authentication</a></li>
-<li><a class="" href="DNS_Config.html">DNS Config</a></li>
-<li><a class="" href="Databases.html">Databases</a></li>
-<li><a class="" href="Distributed_Systems.html">Distributed Systems</a></li>
+<li><a class="" href="../index.html">index</a></li>
+<li><a class="" href="../Authentication.html">Authentication</a></li>
+<li><a class="" href="../DNS_Config.html">DNS Config</a></li>
+<li><a class="" href="../Databases.html">Databases</a></li>
+<li><a class="" href="../Distributed_Systems.html">Distributed Systems</a></li>
 <li class="heading"><span>Django</span></li>
 <ul>
-<li><a class="" href="Django/Django.html">Django</a></li>
-<li><a class="" href="Django/Migrations.html">Migrations</a></li>
-<li><a class="" href="Django/Models.html">Models</a></li>
-<li><a class="" href="Django/Querysets.html">Querysets</a></li>
+<li><a class="" href="../Django/Django.html">Django</a></li>
+<li><a class="" href="../Django/Migrations.html">Migrations</a></li>
+<li><a class="" href="../Django/Models.html">Models</a></li>
+<li><a class="" href="../Django/Querysets.html">Querysets</a></li>
 </ul>
 <li class="heading"><span>Entrepreneurship</span></li>
 <ul>
-<li><a class="" href="Entrepreneurship/Acronyms.html">Acronyms</a></li>
-<li><a class="" href="Entrepreneurship/Aquired_Episodes.html">Aquired Episodes</a></li>
-<li><a class="" href="Entrepreneurship/Business_Analysis.html">Business Analysis</a></li>
-<li><a class="" href="Entrepreneurship/Terminology.html">Terminology</a></li>
-<li><a class="" href="Entrepreneurship/Venture_Capital.html">Venture Capital</a></li>
+<li><a class="" href="Acronyms.html">Acronyms</a></li>
+<li><a class="" href="Aquired_Episodes.html">Aquired Episodes</a></li>
+<li><a class="" href="Business_Analysis.html">Business Analysis</a></li>
+<li><a class="active" href="Terminology.html">Terminology</a></li>
+<li><a class="" href="Venture_Capital.html">Venture Capital</a></li>
 </ul>
-<li><a class="" href="File_Sharing.html">File Sharing</a></li>
-<li><a class="active" href="Frontend.html">Frontend</a></li>
+<li><a class="" href="../File_Sharing.html">File Sharing</a></li>
+<li><a class="" href="../Frontend.html">Frontend</a></li>
 <li class="heading"><span>JavaScript</span></li>
 <ul>
-<li><a class="" href="JavaScript/Flux.html">Flux</a></li>
-<li><a class="" href="JavaScript/JavaScript.html">JavaScript</a></li>
-<li><a class="" href="JavaScript/React.html">React</a></li>
-<li><a class="" href="JavaScript/Vue.html">Vue</a></li>
+<li><a class="" href="../JavaScript/Flux.html">Flux</a></li>
+<li><a class="" href="../JavaScript/JavaScript.html">JavaScript</a></li>
+<li><a class="" href="../JavaScript/React.html">React</a></li>
+<li><a class="" href="../JavaScript/Vue.html">Vue</a></li>
 </ul>
-<li><a class="" href="Python.html">Python</a></li>
+<li><a class="" href="../Python.html">Python</a></li>
 <li class="heading"><span>TCP IP</span></li>
 <ul>
-<li><a class="" href="TCP-IP/ARP-RARP.html">ARP RARP</a></li>
-<li><a class="" href="TCP-IP/ICMP.html">ICMP</a></li>
-<li><a class="" href="TCP-IP/IP_Addresses.html">IP Addresses</a></li>
-<li><a class="" href="TCP-IP/IP_Fragmentation.html">IP Fragmentation</a></li>
-<li><a class="" href="TCP-IP/IP_Subnets.html">IP Subnets</a></li>
-<li><a class="" href="TCP-IP/Network_Layers.html">Network Layers</a></li>
-<li><a class="" href="TCP-IP/TCP-IP.html">TCP IP</a></li>
-<li><a class="" href="TCP-IP/Unix_Specific.html">Unix Specific</a></li>
-<li><a class="" href="TCP-IP/routing.html">routing</a></li>
+<li><a class="" href="../TCP-IP/ARP-RARP.html">ARP RARP</a></li>
+<li><a class="" href="../TCP-IP/ICMP.html">ICMP</a></li>
+<li><a class="" href="../TCP-IP/IP_Addresses.html">IP Addresses</a></li>
+<li><a class="" href="../TCP-IP/IP_Fragmentation.html">IP Fragmentation</a></li>
+<li><a class="" href="../TCP-IP/IP_Subnets.html">IP Subnets</a></li>
+<li><a class="" href="../TCP-IP/Network_Layers.html">Network Layers</a></li>
+<li><a class="" href="../TCP-IP/TCP-IP.html">TCP IP</a></li>
+<li><a class="" href="../TCP-IP/Unix_Specific.html">Unix Specific</a></li>
+<li><a class="" href="../TCP-IP/routing.html">routing</a></li>
 </ul>
-<li><a class="" href="docker-compose.html">docker compose</a></li>
+<li><a class="" href="../docker-compose.html">docker compose</a></li>
 </ul>
     </nav>
     <article id="main" class="content">
@@ -661,10 +661,19 @@
 
       </div>
 
-      <h4 id="color-changes">Color changes <a class="heading-anchor-permalink" href="#color-changes">#</a></h4>
-<p>Proper design frameworks have a standard color set. To theme your app you can easily darken and lighten each of the colors with darken or lighten classes. This produces colors that go together well.</p>
-<h3 id="icons">Icons <a class="heading-anchor-permalink" href="#icons">#</a></h3>
-<p>Icons always act weird in Vue, you cannot toggle their classes dynamically and they weren’t appearing when accessing by <code>wrapper.find</code> in just</p>
+      <h3 id="venture-capital-terminology">Venture Capital Terminology <a class="heading-anchor-permalink" href="#venture-capital-terminology">#</a></h3>
+<ul>
+<li>2 and 20: A management fee structure where VC’s take a 2% management fee annually and 20% of the fund profits when the investment is returned</li>
+<li>carry: profit percentage managers take on funds</li>
+</ul>
+<h3 id="general-terminology">General Terminology <a class="heading-anchor-permalink" href="#general-terminology">#</a></h3>
+<ul>
+<li>lockup: the period of time where you cannot access your capital in a fund. E.g. one year lockup.</li>
+<li>runway: how long a startup will survive at the current revenue and expense rates</li>
+<li>Copyleft: an open-source paradigm where by using a copyleft software you are obligated to both open-source whatever you are working on and contribute back to the original software</li>
+<li>s1: The form a company files when going public</li>
+<li>f1: The foreign version of an s1</li>
+</ul>
 
     </article>
   </div>
