--- a/_til_docs/File_Sharing.html
+++ b/_til_docs/File_Sharing.html
@@ -609,29 +609,48 @@
     </a>
     <nav id="menu">
       <ul>
-<li><a class="" href="README.html">README</a></li>
 <li><a class="" href="index.html">index</a></li>
 <li><a class="" href="Authentication.html">Authentication</a></li>
 <li><a class="" href="DNS_Config.html">DNS Config</a></li>
+<li><a class="" href="Databases.html">Databases</a></li>
 <li><a class="" href="Distributed_Systems.html">Distributed Systems</a></li>
-<li><a class="" href="Django.html">Django</a></li>
+<li class="heading"><span>Django</span></li>
+<ul>
+<li><a class="" href="Django/Django.html">Django</a></li>
+<li><a class="" href="Django/Migrations.html">Migrations</a></li>
+<li><a class="" href="Django/Models.html">Models</a></li>
+<li><a class="" href="Django/Querysets.html">Querysets</a></li>
+</ul>
 <li class="heading"><span>Entrepreneurship</span></li>
 <ul>
+<li><a class="" href="Entrepreneurship/Acronyms.html">Acronyms</a></li>
 <li><a class="" href="Entrepreneurship/Aquired_Episodes.html">Aquired Episodes</a></li>
+<li><a class="" href="Entrepreneurship/Business_Analysis.html">Business Analysis</a></li>
+<li><a class="" href="Entrepreneurship/Terminology.html">Terminology</a></li>
+<li><a class="" href="Entrepreneurship/Venture_Capital.html">Venture Capital</a></li>
 </ul>
+<li><a class="active" href="File_Sharing.html">File Sharing</a></li>
 <li><a class="" href="Frontend.html">Frontend</a></li>
-<li><a class="active" href="JavaScript.html">JavaScript</a></li>
+<li class="heading"><span>JavaScript</span></li>
+<ul>
+<li><a class="" href="JavaScript/Flux.html">Flux</a></li>
+<li><a class="" href="JavaScript/JavaScript.html">JavaScript</a></li>
+<li><a class="" href="JavaScript/React.html">React</a></li>
+<li><a class="" href="JavaScript/Vue.html">Vue</a></li>
+</ul>
 <li><a class="" href="Python.html">Python</a></li>
 <li class="heading"><span>TCP IP</span></li>
 <ul>
 <li><a class="" href="TCP-IP/ARP-RARP.html">ARP RARP</a></li>
+<li><a class="" href="TCP-IP/ICMP.html">ICMP</a></li>
 <li><a class="" href="TCP-IP/IP_Addresses.html">IP Addresses</a></li>
+<li><a class="" href="TCP-IP/IP_Fragmentation.html">IP Fragmentation</a></li>
 <li><a class="" href="TCP-IP/IP_Subnets.html">IP Subnets</a></li>
 <li><a class="" href="TCP-IP/Network_Layers.html">Network Layers</a></li>
 <li><a class="" href="TCP-IP/TCP-IP.html">TCP IP</a></li>
 <li><a class="" href="TCP-IP/Unix_Specific.html">Unix Specific</a></li>
+<li><a class="" href="TCP-IP/routing.html">routing</a></li>
 </ul>
-<li><a class="" href="Vue.html">Vue</a></li>
 <li><a class="" href="docker-compose.html">docker compose</a></li>
 </ul>
     </nav>
@@ -642,9 +661,12 @@
 
       </div>
 
-      <h3 id="rendering-engines-vs.-javascript-engine">Rendering Engines vs. Javascript Engine <a class="heading-anchor-permalink" href="#rendering-engines-vs.-javascript-engine">#</a></h3>
-<p>A Javascript engine, like <code>v8</code> is the engine that processes and runs the webpage JavaScript. “Hot” code paths are optimized for quicker execution (e.g. looking up a property in an object directly). The browser JavaScript engine queries the rendering engine for displaying things.</p>
-<p>A browser rendering engine, e.g. <code>Gecko</code> and <code>Webkit</code> displays the webpages written in the markup language. This interprets <code>HTML</code>, <code>CSS</code>, <code>XML</code>, images, etc. and produces the final webpage for the browser.</p>
+      <h1 id="bittorrent">BitTorrent <a class="heading-anchor-permalink" href="#bittorrent">#</a></h1>
+<ul>
+<li>BitTorrent is a v2 peer-to-peer file sharing protocol</li>
+<li>It allows the client to “shard” files - split them into different chunks and download them piecewise simultaneously from different hosts</li>
+<li>This technology is the core of a lot of privacy</li>
+</ul>
 
     </article>
   </div>
