--- a/_til_docs/Python.html
+++ b/_til_docs/Python.html
@@ -609,29 +609,48 @@
     </a>
     <nav id="menu">
       <ul>
-<li><a class="" href="README.html">README</a></li>
 <li><a class="" href="index.html">index</a></li>
 <li><a class="" href="Authentication.html">Authentication</a></li>
 <li><a class="" href="DNS_Config.html">DNS Config</a></li>
+<li><a class="" href="Databases.html">Databases</a></li>
 <li><a class="" href="Distributed_Systems.html">Distributed Systems</a></li>
-<li><a class="" href="Django.html">Django</a></li>
+<li class="heading"><span>Django</span></li>
+<ul>
+<li><a class="" href="Django/Django.html">Django</a></li>
+<li><a class="" href="Django/Migrations.html">Migrations</a></li>
+<li><a class="" href="Django/Models.html">Models</a></li>
+<li><a class="" href="Django/Querysets.html">Querysets</a></li>
+</ul>
 <li class="heading"><span>Entrepreneurship</span></li>
 <ul>
+<li><a class="" href="Entrepreneurship/Acronyms.html">Acronyms</a></li>
 <li><a class="" href="Entrepreneurship/Aquired_Episodes.html">Aquired Episodes</a></li>
+<li><a class="" href="Entrepreneurship/Business_Analysis.html">Business Analysis</a></li>
+<li><a class="" href="Entrepreneurship/Terminology.html">Terminology</a></li>
+<li><a class="" href="Entrepreneurship/Venture_Capital.html">Venture Capital</a></li>
 </ul>
+<li><a class="" href="File_Sharing.html">File Sharing</a></li>
 <li><a class="" href="Frontend.html">Frontend</a></li>
-<li><a class="" href="JavaScript.html">JavaScript</a></li>
+<li class="heading"><span>JavaScript</span></li>
+<ul>
+<li><a class="" href="JavaScript/Flux.html">Flux</a></li>
+<li><a class="" href="JavaScript/JavaScript.html">JavaScript</a></li>
+<li><a class="" href="JavaScript/React.html">React</a></li>
+<li><a class="" href="JavaScript/Vue.html">Vue</a></li>
+</ul>
 <li><a class="active" href="Python.html">Python</a></li>
 <li class="heading"><span>TCP IP</span></li>
 <ul>
 <li><a class="" href="TCP-IP/ARP-RARP.html">ARP RARP</a></li>
+<li><a class="" href="TCP-IP/ICMP.html">ICMP</a></li>
 <li><a class="" href="TCP-IP/IP_Addresses.html">IP Addresses</a></li>
+<li><a class="" href="TCP-IP/IP_Fragmentation.html">IP Fragmentation</a></li>
 <li><a class="" href="TCP-IP/IP_Subnets.html">IP Subnets</a></li>
 <li><a class="" href="TCP-IP/Network_Layers.html">Network Layers</a></li>
 <li><a class="" href="TCP-IP/TCP-IP.html">TCP IP</a></li>
 <li><a class="" href="TCP-IP/Unix_Specific.html">Unix Specific</a></li>
+<li><a class="" href="TCP-IP/routing.html">routing</a></li>
 </ul>
-<li><a class="" href="Vue.html">Vue</a></li>
 <li><a class="" href="docker-compose.html">docker compose</a></li>
 </ul>
     </nav>
@@ -671,6 +690,16 @@ def printWord(word):
 <p>Calling <code>printWord</code> will now print the word twice. You always want to include <code>*args, **kwargs</code> in decorators so you can pass in an arbitrary number of arguments.</p>
 <h3 id="introspection-vs-reflection">Introspection vs Reflection <a class="heading-anchor-permalink" href="#introspection-vs-reflection">#</a></h3>
 <p><code>Introspection</code> is the ability for an object to know about itself at runtime. <code>Reflection</code> is one step further: the ability to modify itself at runtime.</p>
+<h3 id="general-tips">General Tips <a class="heading-anchor-permalink" href="#general-tips">#</a></h3>
+<ul>
+<li>To get a value from a tuple you can convert to a dictionary and then use the get method</li>
+<li>Set: A collection that is unordered, unindexed, and unique</li>
+<li>Python 3.5+ supports type hints
+<ul>
+<li><code>def my_func(num: int) -&gt; str:</code></li>
+</ul>
+</li>
+</ul>
 
     </article>
   </div>
